--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "fcc-learn-npm-package-json",
 	"version": "0.0.1",
     "author": "romina",
+	"description": "Proyecto de práctica para los desafíos de FreeCodeCamp",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
