--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.1",
     "author": "romina",
 	"description": "Proyecto de práctica para los desafíos de FreeCodeCamp",
+	"keywords": ["freecodecamp", "node", "npm", "backend"],
 	"dependencies": {
 		"express": "^4.14.0"
 	},
